# endless-ssh-rs-with-web

./: .dockerignore  .gitignore  .prettierignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  cliff.toml  clippy.toml  cog.toml  dependency-cruiser.config.mjs  docker-compose.yml  eslint.config.mjs  eslint.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project-words.txt  spellcheck.dic  tsconfig.json  vite.config.ts
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json  docker-compose.yml  postCreate.sh
.github/workflows/: build-rust.yml  build.yml  ci.yml  codeql.yml  format.yml  graduate-release.yml  lint-commits.yml  machete.yml  publish-crate-after-release.yml  release.yml  retag-build-cache-after-pr.yml  retag-containers-after-release.yml  rust.yml  spellcheck.yml  typescript.yml
.sqlx/: query-4cded0721fd181132e2b484145a3651a63d5937efec1d50c8dddca197ed58073.json  query-5221140aba0cbc2f03c6ec5b2625f7b0f2091fecc01c9ce76a5b4d5ed2845e10.json  query-5afaf5983cb0ec1320e98bdb32630fc975e8ffb5f94a0bbbe027fd3169213bc8.json  query-7a5f11b4b9faf0da08649e1eec0f9f5c9b9c1ffdaf93413244f050522317aafb.json  query-e38ae3fa7931a731eb11eb19c0e3731292ae0241b253df9a7a4fc9247aaa0db2.json  query-ea9a124e8c68eb2a6da768392663859e5bfeab937c86de64abc24e9e173da6be.json  query-fd5719d422996157fda3212957e54ec9875059ea4f201b7a2031ab8eca11f186.json
back-end/src/: client.rs  client_queue.rs  events.rs  line.rs  listener.rs  main.rs  server.rs  signal_handlers.rs
back-end/src/traits/: display_as_debug.rs
back-end/src/utils/: mod.rs
build-scripts/: build.sh
crates/endless-ssh-rs-with-web/: Cargo.toml
crates/endless-ssh-rs-with-web/migrations/: 0002_connections.sql  0003_connections_1_min.sql  0004_connections_1_min_aggregate_policy.sql  0005_connections_5_min.sql  0006_connections_5_min_aggregate_policy.sql  0007_connections_1_hour.sql  0008_connections_1_hour_aggregate_policy.sql  0009_connections_1_day.sql  0010_connections_1_day_aggregate_policy.sql  0011_connections_retention_policies.sql  0012_totals.sql
crates/endless-ssh-rs-with-web/src/: build.rs  cli.rs  client.rs  config.rs  db.rs  events.rs  ffi_wrapper.rs  geoip.rs  listener.rs  main.rs  router.rs  sender.rs  shutdown.rs  signal_handlers.rs  state.rs  test_utils.rs  utils.rs
crates/endless-ssh-rs-with-web/src/db/: conversions.rs  types.rs
crates/endless-ssh-rs-with-web/src/router/: api_router.rs  ws_router.rs
crates/endless-ssh-rs-with-web/src/traits/: pretty_formatter.rs
crates/endless-ssh-rs-with-web/src/utils/: ser_helpers.rs
front-end/src/: index.html  test.setup.ts
front-end/src/components/: app.tsx  event-feed.tsx  stats-chart.tsx  stats-panel.tsx  time-range-selector.tsx  world-map.tsx
front-end/src/entrypoints/: index.tsx
front-end/src/hooks/: use-web-sockets.ts
front-end/src/lib/: formatting.ts
front-end/src/styles/: index.css
front-end/src/types/: environment.ts
init-db/: init-user-db.sh
types/: eslint-plugin-react-hook-form.d.ts
