[package]
name = "endless-ssh-rs"
# don't change this, it's updated before an actual build by update-version.sh
version = "0.0.0-development"
edition = "2021"
rust-version = "1.84.1"
authors = ["Kristof Mattei"]
description = "endless-ssh-rs in Rust"
license-file = "LICENSE"
categories = ["fun"]
keywords = ["random"]
repository = "https://github.com/kristof-mattei/endless-ssh-rs"

[[bin]]
name = "endless-ssh-rs"
path = "back-end/src/main.rs"

[lints.clippy]
# don't stop from compiling / running
all = "warn"
cargo = "warn"
complexity = "warn"
correctness = "warn"
pedantic = "warn"
perf = "warn"
# restriction = "warn"
style = "warn"
suspicious = "warn"

# this one causes confusion when combining variables (`foo`) and
# dereferenced variables (`foo.bar`). The latter cannot be inlined
# so we don't inline anything
uninlined-format-args = { level = "allow", priority = 127 }

[lints.rust]
let_underscore_drop = { level = "deny", priority = 127 }
non_ascii_idents = { level = "deny", priority = 127 }

[profile.dev.package.backtrace]
opt-level = 3

[[test]]
name = "endless-ssh-rs"
path = "back-end/tests/integration_tests.rs"

[dependencies]
axum = { version = "0.8.1" }
clap = { version = "4.5.27", features = ["cargo"] }
color-eyre = { git = "https://github.com/eyre-rs/eyre", rev = "c4ee249f7c51dc6452e8704ae8d117d90d6eeebc" }
dotenvy = "0.15.7"
libc = "0.2.169"
mockall = "0.13.1"
mockall_double = "0.3.1"
once_cell = "1.20.2"
rand = "0.9.0"
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
time = { version = "0.3.37", features = ["formatting"] }
tokio = { version = "1.43.0", features = [
    "macros",
    "io-util",
    "io-std",
    "rt-multi-thread",
    "signal",
    "time",
] }
tokio-util = "0.7.13"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "fs", "trace"] }
socketioxide = { version = "0.16.1", features = ["tracing"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
url = { version = "2.5.3", features = ["serde"] }

# We compile the Docker container with musl to get a static library. Smaller, faster.
# BUT that means that we need to include openssl
# Documentation on the syntax:
# https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#platform-specific-dependencies
[target.'cfg(all(any(target_arch="x86_64", target_arch="aarch64"), target_os="linux", target_env="musl"))'.dependencies]
openssl = { version = "0.10.70", features = ["vendored"] }
