[package]
name = "endless-ssh-rs-with-web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
include.workspace = true
build = "src/build.rs"

[features]
default = []
tokio-console = ["dep:console-subscriber"]

[dependencies]
axum = { version = "0.8.9", features = ["macros", "ws"] }
clap = { version = "4.6.1", features = ["cargo", "derive", "string"] }
color-eyre = "0.6.5"
console-subscriber = { version = "0.5.0", optional = true }
dashmap = "6.1.0"
dotenvy = "0.15.7"
flate2 = "1.1.9"
futures = "0.3.32"
http = "1.4.0"
ipnet = "2.12.0"
libc = "0.2.186"
maxminddb = { version = "0.27.3", features = ["mmap"] }
memmap2 = "0.9.10"
mimalloc = "0.1.50"
mockall = "0.14.0"
mockall_double = "0.3.1"
rand = "0.10.1"
reqwest = { version = "0.13.2", default-features = false, features = [
    "gzip",
    "stream",
    "rustls",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = [
    "ipnet",
    "postgres",
    "runtime-tokio",
    "time",
] }
tar = "0.4.45"
thiserror = "2.0.18"
time = { version = "0.3.47", features = [
    "formatting",
    "serde",
    "serde-human-readable",
] }
tokio = { version = "1.52.1", features = [
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
    "tracing",
] }
tokio-util = { version = "0.7.18", features = ["rt"] }
tower-http = { version = "0.6.8", features = ["cors", "fs", "trace"] }
tower-proxy = { version = "0.8.0", features = ["axum"] }
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.23", features = [
    "env-filter",
    "time",
    "tracing-log",
] }
url = { version = "2.5.8", features = ["serde"] }
uuid = { version = "1.23.1", features = ["v7"] }

[dev-dependencies]
pretty_assertions = "=1.4.1"

[lints]
workspace = true
