[package]
name = "endless-ssh-rs-with-web"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
categories.workspace = true
keywords.workspace = true
repository.workspace = true
include.workspace = true
build = "src/build.rs"

[features]
default = []
tokio-console = ["dep:console-subscriber"]

[dependencies]
axum = { version = "0.8.9", features = ["macros", "ws"] }
clap = { version = "4.6.1", features = ["cargo", "derive", "string"] }
color-eyre = "0.6.5"
console-subscriber = { version = "0.5.0", optional = true }
dashmap = "6.2.1"
dotenvy = "0.15.7"
flate2 = "1.1.9"
futures = "0.3.32"
http = "1.4.2"
ipnet = "2.12.0"
libc = "0.2.186"
maxminddb = { version = "0.29.0", features = ["mmap"] }
memmap2 = "0.9.11"
mimalloc = "0.1.52"
mockall = "0.15.0"
mockall_double = "0.3.1"
rand = "0.10.1"
reqwest = { version = "0.13.4", default-features = false, features = [
    "gzip",
    "stream",
    "rustls",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = [
    "ipnet",
    "postgres",
    "runtime-tokio",
    "time",
] }
tar = "0.4.46"
thiserror = "2.0.18"
time = { version = "0.3.51", features = [
    "formatting",
    "serde",
    "serde-human-readable",
] }
tokio = { version = "1.52.3", features = [
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "signal",
    "sync",
    "time",
    "tracing",
] }
tokio-util = { version = "0.7.18", features = ["rt"] }
tower-http = { version = "0.7.0", features = [
    "cors",
    "fs",
    "on-early-drop",
    "trace",
] }
tower-proxy = { version = "0.9.0", features = ["axum"] }
tracing = "0.1.44"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.23", features = [
    "env-filter",
    "time",
    "tracing-log",
] }
url = { version = "2.5.8", features = ["serde"] }
uuid = { version = "1.23.4", features = ["v7"] }

[dev-dependencies]
pretty_assertions = "=1.4.1"

[lints]
workspace = true
